--- a/main.css
+++ b/main.css
@@ -1,13 +1,187 @@
 body {
-  padding-top: 54px;
+  background-image: none;
+  background-size: none;
+  background: none;
+/*  font-family: "Proxima";*/
+  margin: 0 !important;
+  color: #2b3636;
 }
 
-@media (min-width: 992px) {
-  body {
-    padding-top: 56px;
-  }
+
+
+
+
+.header {
+  background: url(pattern.gif);
+  height: 550px;
+  margin-bottom: 4em;
 }
 
-.pagination {
-  margin-bottom: 15px;
+h1 {
+  margin-top: 4em;
+  margin-bottom: 1em;
+}
+
+h2 {
+  margin-bottom: 2em;
+}
+
+.gray-container {
+  background-color: #f5f6f7;
+  height: 100%;
+}
+.content-box {
+  background: #fff;
+  border-radius: 6px;
+  box-shadow: 0 10px 21px #e7eeef;
+  padding-left: 0px;
+  padding: 30px 45px;
+  position: relative;
+  text-align: left;
+  width: 100%;
+  margin-top: 70px;
+} 
+
+.content-box h1 {
+  color: #515a5f;
+  padding-bottom: 22px;
+  font-size: 20px;
+  text-align: center;
+  font-weight: 700;
+  letter-spacing: 0.77px;
+  line-height: 28px;
+}
+
+h1 {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.section-title {
+  font-size: 22px;
+  margin-bottom: 30px;
+  font-weight: bold;
+  margin-top: 20px;
+}
+
+.course-section {
+  margin-bottom: 10px;
+}
+
+.course-section ul.section-list {
+  margin: 0;
+  padding: 0;
+}
+
+.course-section .section-title {
+  background: #e8e8e8;
+  padding: 10px 16px;
+  margin: 0;
+  font-size: 15px;
+  font-weight: bold;
+  border-bottom: 1px solid #fff;
+}
+
+.course-section ul.section-list .section-item {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  border-bottom: 1px solid #fff;
+} 
+
+
+.course-section ul.section-list .section-item .item {
+  display: block;
+  padding: 11px 16px;
+  background: #f0f0f0;
+  list-style-type: none;
+  font-size: 15px;
+  letter-spacing: 0px;
+  color: #425252;
+  text-decoration: none;
+  font-weight: 200;
+}
+
+.course-section ul.section-list .section-item .title-container {
+  border-left: 1px solid rgba(57, 148, 154, 0.1);
+  margin: -11px;
+  padding: 10px;
+  margin-left: 41px;
+  padding-right: 70px;
+}
+
+
+.course-section ul.section-list .section-item .item .lecture-icon {
+    padding-right: 5px;
+}
+
+.lecture-icon {
+    font-size: 16px;
+}
+
+.course-section ul.section-list .section-item .lecture-name {
+    font-weight: 200;
+}
+
+
+.course-section ul.section-list .section-item .item .btn-primary {
+    margin-top: -3px;
+    margin-right: -5px;
+}
+
+.course-mainbar .course-section .btn-primary {
+    margin-right: -65px !important;
+}
+
+.lecture-content .lecture-attachment {
+    margin-bottom: 20px;
+    margin-top: 30px;
+}
+
+header.half-height {
+    height: 46px !important;
+    z-index: 101;
+}
+
+.full-width {
+    background-color: #2b3636;
+    height: 60px;
+    top: 0;
+    position: fixed;
+    width: 100%;
+    z-index: 100;
+}
+
+
+header.half-height .lecture-left {
+    width: 250px;
+    height: 46px !important;
+    float: left;
+}
+
+
+header.half-height .lecture-nav {
+    display: flex;
+    height: 100%;
+    margin-left: 250px;
+    cursor: pointer;
+}
+
+header.half-height .lecture-nav a.nav-btn {
+  align-items: center;
+  color: #ffffff;
+  display: flex;
+  flex: 1;
+  font-size: 16px;
+  justify-content: center;
+  border-left: 1px solid rgba(215, 218, 219, 0.3);
+}
+
+header.half-height .lecture-nav a.nav-btn.complete, header.half-height .lecture-nav a.nav-btn:hover {
+  background: #39949a;
+  color: white;
+  text-decoration: none;
+}
+
+
 
