--- a/main.css
+++ b/main.css
@@ -2,26 +2,43 @@ body {
   background-image: none;
   background-size: none;
   background: none;
-/*  font-family: "Proxima";*/
   margin: 0 !important;
   color: #2b3636;
 }
 
 
-
-
-
+h4 {
+  margin-bottom: 1em;
+}
 .header {
   background: url(pattern.gif);
   height: 550px;
   margin-bottom: 4em;
 }
 
-h1 {
-  margin-top: 4em;
-  margin-bottom: 1em;
+.course-title {
+    line-height: 45px;
+    margin-top: 3em;
+    margin-bottom: 0px;
+    font-weight: bold;
+    font-size: 49px !important;
+    color: #ffffff;
 }
 
+
+.course-subtitle {
+  font-size: 34px !important;
+  line-height: 49px !important;
+  margin-top: 30px;
+  margin-bottom: 50px !important;
+  padding-top: 30px;
+  max-width: 750px;
+  margin: auto;
+  color: #ffffff;
+  font-weight: 200;
+  overflow: hidden;
+
+}
 h2 {
   margin-bottom: 2em;
 }
